Fixed errors and added word breaking instead of character breaking for easier readability

--- a/src/styles/components/text/cursortext.scss
+++ b/src/styles/components/text/cursortext.scss
@@ -2,11 +2,11 @@
 
 .cursor-text {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     max-width: 100%;
     margin-right: auto;
     white-space: pre;
-    /* Set max width */
 
     &.big {
         min-height: 100px;
@@ -31,6 +31,7 @@
 
     .char {
         font-family: $main-font-family;
+        white-space: break-spaces;
     }
 
     .cursor {
