--- a/src/styles/views/frontpage.scss
+++ b/src/styles/views/frontpage.scss
@@ -3,5 +3,5 @@
 .front-page {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 650px;
 }
